--- a/Experiment4/Experiment4.html
+++ b/Experiment4/Experiment4.html
@@ -1,1 +1,43 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>College Website</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            text-decoration: none;
+            background-color: lightskyblue;
+            text-decoration: margin-bottom;
+        }
+        
+        p {
+            font-style: normal;
+        }
+        
+        header {
+            text-decoration: underline;
+            text-decoration: blueviolet;
+            text-decoration: wavy;
+        }
+    </style>
+</head>
+
+<body>
+    <h1 style="text-align: center;">Welcome To Our College</h1>
+    <h1 style="text-align: center; text-decoration: double;"><i><b>"Education is the best key for success in life."</b></i></h1>
+    <p style="text-align: center;">Welcome to our college's website. Explore our courses, departments, faculty, and library resources.</p>
+    <ul style="text-align: center;">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="course.html" target="_blank">Course</a></li>
+        <li>
+            <a href="faculty.html" target="_blank">Faculty</a>
+        </li>
+        <li>
+            <a href="library.html" target="_blank">library</a>
+        </li>
+    </ul>
+</body>
+
+</html>
 
