--- a/Experiment6/Experiment6.html
+++ b/Experiment6/Experiment6.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Audio Page</title>
+</head>
 
+<body>
+    <h1>Welcome to the Audio Page</h1>
+
+    <audio controls>
+        <source src="audio.wav" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+
+    <p><a href="video.html">Go to Video Page</a></p>
+</body>
+</html>
