--- a/Experiment6/Experiment6.html
+++ b/Experiment6/Experiment6.html
@@ -10,7 +10,7 @@
     <h1>Welcome to the Audio Page</h1>
 
     <audio controls>
-        <source src="audio.wav" type="audio/mpeg">
+        <source src="audio.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
